Need to fix icons

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 
 <head>
     <title>Landing Page 2</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/a5e402e3b2.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="body">
     <!--https://unbounce.com/landing-page-examples/best-landing-page-design-examples/
 EXAMPLE-->
 
@@ -16,21 +17,55 @@ EXAMPLE-->
 
         <div class="first-box">
             <div class="first-box-image-container">
+                <img class="suit-image" src="https://static.turbosquid.com/Preview/2016/09/10__11_58_14/1.jpgF336D82A-9CE0-4455-AC38-CDEFBF117C81Original.jpg">
             </div>
             <div class="first-box-text-container">
+                <h1 class="first-box-text" id="headline">PAGE HEADLINE</h1>
+                <h2 class="first-box-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, doloremque.
+                </h2>
+                <h2 class="first-box-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, quibusdam.
+                </h2>
             </div>
         </div>
 
-        <div class="middle-white-space">
+        <div class="middle-white-space-container">
+            <div class="middle-white-space">
+                <h3>
+                    Sub-heading
+                </h3>
+                <h4>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.
+                </h4>
+            </div>
         </div>
 
         <div class="second-box">
-            <div class="tree=icon-container">
-                <div class="icon1">
+            <div class="three-icon-container">
+                <div class="multi-icons">
+                    <div class="icon-div">
+                        <i class="fa-solid fa-shoe-prints"></i>
+                    </div>
+                    <h3>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, eius!
+                    </h3>
                 </div>
-                <div class="icon2">
+                <div class="multi-icons">
+                    <div class="icon-div">
+                        <i class="fa-solid fa-shirt"></i>
+                    </div>
+                    <h3 class="icon-2-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, eius!
+                    </h3>
                 </div>
-                <div class="icon3">
+                <div class="multi-icons">
+                    <div class="icon-div">
+                        <i class="fa-solid fa-hat-cowboy"></i>
+                    </div>
+                    <h3 class="icon-3-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, eius!
+                    </h3>
                 </div>
             </div>
         </div>
