--- a/index.html
+++ b/index.html
@@ -85,44 +85,85 @@ EXAMPLE-->
 
             </div>
         </div>
-
+        <!-- first gallery
         <div class="image-gallery">
-            <div class="gallery-container">
-                <div id="gallery-pic1">
-                    <img class="gallery" src=" https://i.pinimg.com/474x/51/5a/e3/515ae353042ecd4d671ed60996f56d69.jpg ">
-                </div>
-                <div id="gallery-pic2 ">
-                    <img class="gallery" src="https://i.pinimg.com/originals/cb/1a/5f/cb1a5ff30da874f6dd050dcbda8c0135.jpg">
-                </div>
-                <div id="gallery-pic3">
-                    <img class="gallery" src=" https://i.etsystatic.com/18662733/r/il/4b980c/2210916970/il_fullxfull.2210916970_9iv2.jpg ">
-                </div>
-                <div id="gallery-pic4 ">
-                    <img class="gallery" src="https://d17a17kld06uk8.cloudfront.net/products/AQKP7TV/XJFFV733-original.jpg">
-                </div>
-                <div id="gallery-pic5">
-                    <img class="gallery" src=" https://i.pinimg.com/736x/ee/41/28/ee4128dad683d341cbace918fee7b574.jpg ">
-                </div>
-                <div id="gallery-pic6 ">
-                    <img class="gallery" src="https://www.sareesaga.com/image/cache/data18/cream-imported-engagement-indo-western-sherwani-185717-800x1100.jpg">
-                </div>
-                <div id="gallery-pic7">
-                    <img class="gallery" src=" http://www.deutschemode.net/re_collections/1492088464_offer_17358678_10150780663264950_.jpg ">
-                </div>
-                <div id="gallery-pic7 ">
-                    <img class="gallery" src="https://i.pinimg.com/originals/fd/ff/94/fdff94559f20348dc6a1574eb17b6f2d.jpg">
-                </div>
-                <div id="gallery-pic8">
-                    <img class="gallery" src=" https://1.bp.blogspot.com/-O3vLjRJFu_M/YMhxWSfDKxI/AAAAAAAAN8w/95HaMnU0Tscb5R0_zIDvYAb9OAkv_hcogCLcBGAsYHQ/s846/8ca78549c52e05dc11e892e50a291041.jpg ">
-                </div>
-                <div id="gallery-pic9 ">
-                    <img class="gallery" src="https://www.next.co.uk/nxtcms/resource/blob/4167832/0a81c2a8cb1fd89d3392a799e561c631/wedding-block5-data.jpg">
-                </div>
-                <div id="gallery-pic10">
-                    <img class="gallery" src=" https://i.etsystatic.com/9890946/r/il/d39fa0/2220162031/il_570xN.2220162031_2e0n.jpg ">
-                </div>
+
+            <div id="gallery-pic1">
+                <img class="gallery" src=" https://i.pinimg.com/474x/51/5a/e3/515ae353042ecd4d671ed60996f56d69.jpg ">
+            </div>
+            <div id="gallery-pic2">
+                <img class="gallery" src="https://i.pinimg.com/originals/cb/1a/5f/cb1a5ff30da874f6dd050dcbda8c0135.jpg">
+            </div>
+            <div id="gallery-pic3">
+                <img class="gallery" src=" https://i.etsystatic.com/18662733/r/il/4b980c/2210916970/il_fullxfull.2210916970_9iv2.jpg ">
+            </div>
+            <div id="gallery-pic4">
+                <img class="gallery" src="https://d17a17kld06uk8.cloudfront.net/products/AQKP7TV/XJFFV733-original.jpg">
+            </div>
+            <div id="gallery-pic5">
+                <img class="gallery" src=" https://i.pinimg.com/736x/ee/41/28/ee4128dad683d341cbace918fee7b574.jpg ">
+            </div>
+            <div id="gallery-pic6 ">
+                <img class="gallery" src="https://www.sareesaga.com/image/cache/data18/cream-imported-engagement-indo-western-sherwani-185717-800x1100.jpg">
+            </div>
+            <div id="gallery-pic7">
+                <img class="gallery" src=" http://www.deutschemode.net/re_collections/1492088464_offer_17358678_10150780663264950_.jpg ">
+            </div>
+            <div id="gallery-pic7">
+                <img class="gallery" src="https://i.pinimg.com/originals/fd/ff/94/fdff94559f20348dc6a1574eb17b6f2d.jpg">
+            </div>
+            <div id="gallery-pic8">
+                <img class="gallery" src=" https://1.bp.blogspot.com/-O3vLjRJFu_M/YMhxWSfDKxI/AAAAAAAAN8w/95HaMnU0Tscb5R0_zIDvYAb9OAkv_hcogCLcBGAsYHQ/s846/8ca78549c52e05dc11e892e50a291041.jpg ">
+            </div>
+            <div id="gallery-pic9">
+                <img class="gallery" src="https://www.next.co.uk/nxtcms/resource/blob/4167832/0a81c2a8cb1fd89d3392a799e561c631/wedding-block5-data.jpg">
+            </div>
+            <div id="gallery-pic10">
+                <img class="gallery" src=" https://i.etsystatic.com/9890946/r/il/d39fa0/2220162031/il_570xN.2220162031_2e0n.jpg ">
+            </div>
+
+        </div>
+    -->
+        <!--gallery without separate divs below-->
+        <div class="image-gallery2">
+            <div class="gallery-container2">
+
+                <img class="gallery" src=" https://i.pinimg.com/474x/51/5a/e3/515ae353042ecd4d671ed60996f56d69.jpg ">
+
+
+                <img class="gallery" src="https://i.pinimg.com/originals/cb/1a/5f/cb1a5ff30da874f6dd050dcbda8c0135.jpg">
+
+
+                <img class="gallery" src=" https://i.etsystatic.com/18662733/r/il/4b980c/2210916970/il_fullxfull.2210916970_9iv2.jpg ">
+
+
+                <img class="gallery" src="https://d17a17kld06uk8.cloudfront.net/products/AQKP7TV/XJFFV733-original.jpg">
+
+
+                <img class="gallery" src=" https://i.pinimg.com/736x/ee/41/28/ee4128dad683d341cbace918fee7b574.jpg ">
+
+
+                <img class="gallery" src="https://www.sareesaga.com/image/cache/data18/cream-imported-engagement-indo-western-sherwani-185717-800x1100.jpg">
+
+
+                <img class="gallery" src=" http://www.deutschemode.net/re_collections/1492088464_offer_17358678_10150780663264950_.jpg ">
+
+
+                <img class="gallery" src="https://i.pinimg.com/originals/fd/ff/94/fdff94559f20348dc6a1574eb17b6f2d.jpg">
+
+
+                <img class="gallery" src=" https://1.bp.blogspot.com/-O3vLjRJFu_M/YMhxWSfDKxI/AAAAAAAAN8w/95HaMnU0Tscb5R0_zIDvYAb9OAkv_hcogCLcBGAsYHQ/s846/8ca78549c52e05dc11e892e50a291041.jpg ">
+
+
+                <img class="gallery" src="https://www.next.co.uk/nxtcms/resource/blob/4167832/0a81c2a8cb1fd89d3392a799e561c631/wedding-block5-data.jpg">
+
+
+
+
             </div>
         </div>
+        -->
+
 
         <div class="testimonials ">
         </div>
