--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <title>Landing Page 2</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/a5e402e3b2.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body class="body">
     <!--https://unbounce.com/landing-page-examples/best-landing-page-design-examples/
 EXAMPLE-->
-
+    <!--TESTING*******************
     <div class="main">
 
         <div class="header">
@@ -124,47 +125,48 @@ EXAMPLE-->
 
         </div>
     -->
-        <!--gallery without separate divs below-->
+    <!--gallery without separate divs below-->
+    <!--TESTING*******************
         <div class="image-gallery2">
             <div class="gallery-container2">
 
-                <img class="gallery" src=" https://i.pinimg.com/474x/51/5a/e3/515ae353042ecd4d671ed60996f56d69.jpg ">
+                <img class="gallery" id="gal-pic-b-1" src=" https://i.pinimg.com/474x/51/5a/e3/515ae353042ecd4d671ed60996f56d69.jpg ">
 
 
-                <img class="gallery" src="https://i.pinimg.com/originals/cb/1a/5f/cb1a5ff30da874f6dd050dcbda8c0135.jpg">
+                <img class="gallery" id="gal-pic-b-2" src="https://i.pinimg.com/originals/cb/1a/5f/cb1a5ff30da874f6dd050dcbda8c0135.jpg">
 
 
-                <img class="gallery" src=" https://i.etsystatic.com/18662733/r/il/4b980c/2210916970/il_fullxfull.2210916970_9iv2.jpg ">
+                <img class="gallery" id="gal-pic-b-3" src=" https://i.etsystatic.com/18662733/r/il/4b980c/2210916970/il_fullxfull.2210916970_9iv2.jpg ">
 
 
-                <img class="gallery" src="https://d17a17kld06uk8.cloudfront.net/products/AQKP7TV/XJFFV733-original.jpg">
+                <img class="gallery" id="gal-pic-b-4" src="https://d17a17kld06uk8.cloudfront.net/products/AQKP7TV/XJFFV733-original.jpg">
+
+                <!--
+                <img class="gallery" id="gal-pic-b-5" src=" https://i.pinimg.com/736x/ee/41/28/ee4128dad683d341cbace918fee7b574.jpg ">
 
 
-                <img class="gallery" src=" https://i.pinimg.com/736x/ee/41/28/ee4128dad683d341cbace918fee7b574.jpg ">
+                <img class="gallery" id="gal-pic-b-6" src="https://www.sareesaga.com/image/cache/data18/cream-imported-engagement-indo-western-sherwani-185717-800x1100.jpg">
 
 
-                <img class="gallery" src="https://www.sareesaga.com/image/cache/data18/cream-imported-engagement-indo-western-sherwani-185717-800x1100.jpg">
+                <img class="gallery" id="gal-pic-b-7" src=" http://www.deutschemode.net/re_collections/1492088464_offer_17358678_10150780663264950_.jpg ">
 
 
-                <img class="gallery" src=" http://www.deutschemode.net/re_collections/1492088464_offer_17358678_10150780663264950_.jpg ">
+                <img class="gallery" id="gal-pic-b-8" src="https://i.pinimg.com/originals/fd/ff/94/fdff94559f20348dc6a1574eb17b6f2d.jpg">
 
 
-                <img class="gallery" src="https://i.pinimg.com/originals/fd/ff/94/fdff94559f20348dc6a1574eb17b6f2d.jpg">
+                <img class="gallery" id="gal-pic-b-9" src=" https://1.bp.blogspot.com/-O3vLjRJFu_M/YMhxWSfDKxI/AAAAAAAAN8w/95HaMnU0Tscb5R0_zIDvYAb9OAkv_hcogCLcBGAsYHQ/s846/8ca78549c52e05dc11e892e50a291041.jpg ">
 
 
-                <img class="gallery" src=" https://1.bp.blogspot.com/-O3vLjRJFu_M/YMhxWSfDKxI/AAAAAAAAN8w/95HaMnU0Tscb5R0_zIDvYAb9OAkv_hcogCLcBGAsYHQ/s846/8ca78549c52e05dc11e892e50a291041.jpg ">
+                <img class="gallery" id="gal-pic-b-10" src="https://www.next.co.uk/nxtcms/resource/blob/4167832/0a81c2a8cb1fd89d3392a799e561c631/wedding-block5-data.jpg">
 
 
-                <img class="gallery" src="https://www.next.co.uk/nxtcms/resource/blob/4167832/0a81c2a8cb1fd89d3392a799e561c631/wedding-block5-data.jpg">
-
-
-
-
+-->
+    <!--TESTING*******************
             </div>
         </div>
         -->
 
-
+    <!--TESTING*******************
         <div class="testimonials ">
         </div>
 
@@ -176,6 +178,68 @@ EXAMPLE-->
 
 
 
+    </div>
+
+    TESTING**************** FIRST
+    <div class="gallery">
+        <a target="_blank" href="img_5terre.jpg">
+            <img src="https://i.pinimg.com/474x/51/5a/e3/515ae353042ecd4d671ed60996f56d69.jpg " alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">Add a description of the image here</div>
+    </div>
+
+    <div class="gallery">
+        <a target="_blank" href="img_forest.jpg">
+            <img src="https://i.pinimg.com/originals/cb/1a/5f/cb1a5ff30da874f6dd050dcbda8c0135.jpg" alt="Forest" width="600" height="400">
+        </a>
+        <div class="desc">Add a description of the image here</div>
+    </div>
+
+    <div class="gallery">
+        <a target="_blank" href="img_lights.jpg">
+            <img src="https://i.etsystatic.com/18662733/r/il/4b980c/2210916970/il_fullxfull.2210916970_9iv2.jpg" alt="Northern Lights" width="600" height="400">
+        </a>
+        <div class="desc">Add a description of the image here</div>
+    </div>
+
+    <div class="gallery">
+        <a target="_blank" href="img_mountains.jpg">
+            <img src="https://d17a17kld06uk8.cloudfront.net/products/AQKP7TV/XJFFV733-original.jpg" alt="Mountains" width="600" height="400">
+        </a>
+        <div class="desc">Add a description of the image here</div>
+    </div>
+
+    <!--
+    TESTING*****************-->
+
+    <div class="row">
+        <div class="column" style="background-color:#aaa;">
+            <!--<img id="abcpic1" src=" https://i.pinimg.com/474x/51/5a/e3/515ae353042ecd4d671ed60996f56d69.jpg ">
+            -->
+            <h2>Column 1</h2>
+            <p>Some text..</p>
+        </div>
+
+        <div class="column" style="background-color:#bbb;">
+            <!--<img id="abcpic2" src="https://i.pinimg.com/originals/cb/1a/5f/cb1a5ff30da874f6dd050dcbda8c0135.jpg">
+           -->
+            <h2>Column 2</h2>
+            <p>Some text..</p>
+        </div>
+
+        <div class="column" style="background-color:#ccc;">
+            <!--<img id="abcpic3" src=" https://i.etsystatic.com/18662733/r/il/4b980c/2210916970/il_fullxfull.2210916970_9iv2.jpg ">
+           -->
+            <h2>Column 3</h2>
+            <p>Some text..</p>
+        </div>
+
+        <div class="column" style="background-color:#ddd;">
+            <!--<img id="abcpic4" src="https://d17a17kld06uk8.cloudfront.net/products/AQKP7TV/XJFFV733-original.jpg">
+           -->
+            <h2>Column 4</h2>
+            <p>Some text..</p>
+        </div>
     </div>
 
 
