--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ EXAMPLE-->
                 <img class="suit-image" src="https://static.turbosquid.com/Preview/2016/09/10__11_58_14/1.jpgF336D82A-9CE0-4455-AC38-CDEFBF117C81Original.jpg">
             </div>
             <div class="first-box-text-container">
-                <h1 class="first-box-text" id="headline">PAGE HEADLINE</h1>
+                <h1 class="first-box-text" id="headline">PAGE HEADLINE Suits R Us</h1>
                 <h2 class="first-box-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, doloremque.
                 </h2>
@@ -242,6 +242,19 @@ EXAMPLE-->
             </div>
         </div>
 
+        <div class="bottom-box">
+            <p>As Seen in the News</p>
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, assumenda."</p>
+            <P>- Fashion Magazine</P>
+            <button class="contact">Contact Us</button>
+        </div>
+
+        <div class="footer">
+            <div class="media-icons"></div>
+            <p>Copyright...Lorem ipsum dolor sit amet consectetur.</p>
+            <p>Terms and conditions etc Lorem ipsum dolor sit amet.</p>
+
+        </div>
 
 </body>
 
