responsive icon boxes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 
 <body class="body">
-    <!--https://unbounce.com/landing-page-examples/best-landing-page-design-examples/
-EXAMPLE-->
-    <!--TESTING*******************-->
+    <!--https://unbounce.com/landing-page-examples/best-landing-page-design-examples/ EXAMPLE-->
+
     <div class="main">
 
         <div class="header">
@@ -42,34 +41,38 @@ EXAMPLE-->
             </div>
         </div>
 
-        <div class="second-box">
-            <div class="three-icon-container">
-                <div class="multi-icons">
-                    <div class="icon-div">
-                        <i class="fa-solid fa-shoe-prints"></i>
-                    </div>
-                    <h3>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, eius!
-                    </h3>
+        <!--<div class="second-box">-->
+        <div class="flex-icon-container">
+
+            <div class="flex-icons">
+                <div class="icon-div">
+                    <i class="fa-solid fa-shoe-prints"></i>
                 </div>
-                <div class="multi-icons">
-                    <div class="icon-div">
-                        <i class="fa-solid fa-shirt"></i>
-                    </div>
-                    <h3 class="icon-2-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, eius!
-                    </h3>
-                </div>
-                <div class="multi-icons">
-                    <div class="icon-div">
-                        <i class="fa-solid fa-hat-cowboy"></i>
-                    </div>
-                    <h3 class="icon-3-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, eius!
-                    </h3>
-                </div>
+                <h3>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, eius!
+                </h3>
             </div>
+
+            <div class="flex-icons">
+                <div class="icon-div">
+                    <i class="fa-solid fa-shirt"></i>
+                </div>
+                <h3 class="icon-2-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, eius!
+                </h3>
+            </div>
+
+            <div class="flex-icons">
+                <div class="icon-div">
+                    <i class="fa-solid fa-hat-cowboy"></i>
+                </div>
+                <h3 class="icon-3-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, eius!
+                </h3>
+            </div>
+
         </div>
+        <!-- </div> -->
 
         <div class="contact-box">
             <div class="contact-box-text-container">
@@ -180,7 +183,7 @@ EXAMPLE-->
 
     </div>
 
-    TESTING**************** FIRST
+    TESTING**************** FIRST GALLERY ATTEMPT
     <div class="gallery">
         <a target="_blank" href="img_5terre.jpg">
             <img src="https://i.pinimg.com/474x/51/5a/e3/515ae353042ecd4d671ed60996f56d69.jpg " alt="Cinque Terre" width="600" height="400">
@@ -253,8 +256,14 @@ EXAMPLE-->
             <div class="media-icons"></div>
             <p>Copyright...Lorem ipsum dolor sit amet consectetur.</p>
             <p>Terms and conditions etc Lorem ipsum dolor sit amet.</p>
-
         </div>
+
+
+
+
+
+
+
 
 </body>
 
