some progress made

--- a/index.html
+++ b/index.html
@@ -20,15 +20,20 @@
             <div class="first-box-image-container">
                 <img class="suit-image" src="https://static.turbosquid.com/Preview/2016/09/10__11_58_14/1.jpgF336D82A-9CE0-4455-AC38-CDEFBF117C81Original.jpg">
             </div>
+
             <div class="first-box-text-container">
                 <h1 class="first-box-text" id="headline">Suits R Us</h1>
                 <h2 class="first-box-text" id="first-text">
                     1st Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, doloremque.
                 </h2>
+
                 <h2 class="first-box-text">
                     2nd Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, quibusdam.
                 </h2>
-                <button id="app-button">Book an Appointment</button>
+                <div id="app-button">
+                    <button id="appointment">*responsive size*</button>
+                </div>
+
             </div>
         </div>
 
@@ -76,20 +81,20 @@
         </div>
 
 
-        <div class="contact-box">
-            <div class="contact-box-text-container">
-                <h3 class="contact-text">
-                    <p class="times">
-                        <span>OPENING TIMES ETC</span>
-                        <span>Mon to Sat 9:30-9</span>
-                        <span>Sun 11-7</span>
-                        <span>By the jobcentre</span>
-                        <span> *******how to make a gap with no content in*******</span>
-                        <span>Please wear a mask</span>
-                    </p>
-                </h3>
-            </div>
+
+        <div>
+            <h3>
+                <p>
+                    <span>OPENING TIMES ETC</span>
+                    <span>Mon to Sat 9:30-9</span>
+                    <span>Sun 11-7</span>
+                    <span>By the jobcentre</span>
+                    <span style="color: red; font-weight: bolder;"> *******how to make a gap with no content in*******</span>
+                    <span>Please wear a mask</span>
+                </p>
+            </h3>
         </div>
+
 
 
         <div class="row">
