Save before close

--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
                     2nd Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, quibusdam.
                 </h2>
                 <div id="app-button">
-                    <button id="appointment">*responsive size*</button>
+                    <button id="appointment">*responsive size</button>
                 </div>
 
             </div>
         </div>
 
-        <div class="middle-white-space-container">
-            <div class="middle-white-space">
-                <h3>
-                    Sub-heading
-                </h3>
-                <h4>
-                    Lorem ipsum dolor sit amet consectetur adipisicing.
-                </h4>
-            </div>
+
+        <div class="middle-white-space">
+            <h3>
+                Sub-heading
+            </h3>
+            <h4>
+                Lorem ipsum dolor sit amet consectetur adipisicing.
+            </h4>
         </div>
+
 
 
         <div class="flex-icon-container">
@@ -89,7 +89,7 @@
                     <span>Mon to Sat 9:30-9</span>
                     <span>Sun 11-7</span>
                     <span>By the jobcentre</span>
-                    <span style="color: red; font-weight: bolder;"> *******how to make a gap with no content in*******</span>
+                    <span style="color: red; font-weight: bolder; visibility: hidden;"> *******how to make a gap with no content in*******</span>
                     <span>Please wear a mask</span>
                 </p>
             </h3>
